mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj/trg is loaded)
Auto Toggles (loot, gold, split, sac, assist, map, door, key)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
@
tbaMUD 3.61
[Dec 22 2009] - Rumble
  Made copyover save loadroom so players stay in the same room during copyover.
  Added scan command.
[Dec 21 2009] - Rumble
  Added identify command to shops.
  Moved identify to an active spell. Cleric 11, Mage 20.
[Dec 17 2009] - Rumble
  Standardized /n/r to /r/n in ibt.c
  Removed ability to set a modifier to obj apply NONE.
[Dec 16 2009] - Rumble
  Added some missing code for last_ibt in ibt.c.
  Fixed typos in ibt.c (thanks Elervan)
[Dec 13 2009] - Rumble
  Changed set password to level GRGOD.
[Dec 08 2009] - Rumble
  Added "current zone:" to immortal score.
[Dec 07 2009] - Rumble
  Renumbered UNUSED triggers to UNUSED# to make it easier to unset them when changing trig types. (thanks Parna)
  Fixed double free in IBT that caused crash on /a or saving without any description.
[Dec 06 2009] - Rumble
  Fixed medit autoroll so it would recognize a change and save.
[Dec 05 2009] - Rumble
  Changed zedit clear level restrictions to dump you back at main zedit menu instead of in the level menu.
  Changed zone level restriction to level recommendation so players would not be blocked from zones.
  Changed Zcheck to level 31.
[Nov 19 2009] - Rumble
  Fixed list obj max/min from room to obj. (thanks Elervan)
[Nov 13 2009] - Rumble
  Removed con_app 2nd apply type shock that was for "resurrection?" This was not used in 3.1.
[Nov 12 2009] - Rumble
  Fixed overflow in prefedit.c. (thanks Xiu)
[Nov 01 2009] - Rumble
  Renamed autorun log entries from autoscript killed to terminated so it wouldn't go into the log/rip file.
[Nov 01 2009] - Fizban